Fix automatic scroll on mobile

--- a/app/styles/w-500-style.css
+++ b/app/styles/w-500-style.css
@@ -1,3 +1,39 @@
+@keyframes enterSeq {
+  0% {
+    transform: scale(1.2);
+    filter: none;
+  }
+  25% {
+    transform: scale(1.5) translateX(0);
+    filter: none;
+  }
+  40% {
+    transform: scale(1.5) translateX(0);
+    filter: none;
+  }
+  100% {
+    transform: scale(1.5) translateX(-60vw);
+    filter: none;
+  }
+}
+@keyframes enterSeq2 {
+  0% {
+    transform: scale(1.2);
+    filter: none;
+  }
+  25% {
+    transform: scale(1.5) translateX(0);
+    filter: none;
+  }
+  40% {
+    transform: scale(1.5) translateX(10vw);
+    filter: none;
+  }
+  100% {
+    transform: scale(1.5) translateX(60vw);
+    filter: none;
+  }
+}
 .titleName {
   font-size: 30px;
 }
